--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -7,8 +7,8 @@ body {
     background-color: #fff;
 }
 .header-container {
-    background-color: #527dbc;
     flex-direction: column;
+    background: linear-gradient(to left, #9198e5, #527dbc);
 }
 
 .center-content {
@@ -57,11 +57,7 @@ div {
     background-color: #f1f3fb;
 }
 
-.contentBox {
-    max-width: 50% !important;
-    padding: 1em 2em;
-    background-color: #f1f3fb;
-}
+
 
 .contentBox h1 {
     font-size: 1.5rem;
@@ -76,7 +72,7 @@ div {
 }
 
 .contentBox p {
-    font-size: 1rem;
+    font-size: 1.25rem;
     line-height: 1.5em;
     text-align: justify;
 }
@@ -118,8 +114,11 @@ input {
 }
 
 footer {
-    font-size: 0.5em;
-    text-align: center; 
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    font-family: Colfax,sans-serif;
+    color: #5d5c69;
 }
 
 .nav-link {
@@ -139,14 +138,20 @@ footer {
 
 .adv {
     background-color: #f1f3fb;
-    text-align: center;
-    padding: 1em 2em;
+    padding: 2em;
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2em;
 }
 
 
+.contentBox {
+    background-color: #f1f3fb;
+}
+
 .adv-video {
-    width: 560px;
-    height: 315px
+    width: 100%;
+    height: 100%;
 }
 
 .text-cont {
@@ -156,19 +161,6 @@ footer {
 
 .grey-back {
     background-color: #f1f3fb;
-}
-/*
-.popup-window {
-    text-align: left;
-    position: relative;
-    padding: 0;
-    max-width: 480px;
-    width: 100%;
-    background-color: #fff;
-    border-radius: 8px;
-    display: inline-block;
-    font-weight: 300;
-    box-shadow: 0 0 30px 0 rgba(35, 35, 60, .7);
 }
 
 .popup-overlay {
@@ -184,6 +176,11 @@ footer {
     right: 0;
 }
 
+.popup-container {
+    position: absolute;
+    z-index: 999999;
+}
+
 .popup-wrapper {
     display: table-cell;
     vertical-align: middle;
@@ -192,19 +189,16 @@ footer {
     height: 100%;
 }
 
-.popup-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
+.popup-window {
     text-align: center;
-    color: hsla(0, 0%, 100%, .4);
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: hsla(0, 0%, 100%, .1);
+    position: relative;
+    max-width: 600px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 8px;
+    display: inline-block;
+    font-weight: 300;
+    box-shadow: 0 0 30px 0 rgba(35, 35, 60, .7);
 }
 
 .popup-header {
@@ -216,19 +210,19 @@ footer {
 
 .popup-body {
     box-sizing: border-box;
-    padding: 50px 30px;
+    padding: 30px 30px;
     border-radius: 8px 8px 0 0;
+    float: right;
 }
 
+
+.half-width, .popup-body {
+    width: 50%;
+}
 .popup-footer {
     padding: 30px;
     background-color: #f5f5f6;
     border-radius: 0 0 8px 8px;
 }
 
-#popupmid,
-#popupgood,
-#popupbad {
-    display: none;
-}
-*/
+
