--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -180,29 +180,23 @@ footer {
 }
 
 .popup-window {
-    text-align: center;
-    position: relative;
-    max-width: 600px;
-    width: 100%;
-    background-color: #fff;
+    width: 500px;
+    padding: 30px 50px 30px 50px;
     border-radius: 8px;
     display: inline-block;
-    font-weight: 300;
     box-shadow: 0 0 30px 0 rgba(35, 35, 60, .7);
+    background-color: #FFFFFF;
 }
 
 .popup-header {
-    padding: 30px;
-    border-radius: 5px;
-    font-size: .8em;
-    background: linear-gradient(45deg, rgba(183, 222, 237, 1) 0%, rgba(113, 206, 239, 1) 8%, rgba(183, 222, 237, 1) 64%);
+    font-size: 20px;
+    line-height: 22px;
+    font-family: Lexend Deca, regular, sans-serif;
+    font-weight: 400;
+    color: #003363;
 }
 
 .popup-body {
-    box-sizing: border-box;
-    padding: 30px 30px;
-    border-radius: 8px 8px 0 0;
-    float: right;
 }
 
 #lower-part {
@@ -213,9 +207,6 @@ footer {
     width: 50%;
 }
 .popup-footer {
-    padding: 30px;
-    background-color: #f5f5f6;
-    border-radius: 0 0 8px 8px;
 }
 
 .contactButton {
